[package]
name = "nebula"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
bincode = "1.3.3"
bitvec = { version = "1.0.1", features = ["serde"] }
bytes = "1.4.0"
chrono = "0.4.26"
clap = { version = "4.3.21", features = ["derive"] }
crc = "3.0.1"
fnv = "1.0.7"
lazy_static = "1.4.0"
memmap2 = "0.7.1"
murmur3 = "0.5.2"
rand = "0.8.5"
regex = "1.9.4"
serde = { version = "1.0.175", features = ["derive"] }
